--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,6 +1,6 @@
 <% if(success && success.length){ %>
 <div
-  class="alert alert-success alert-dismissible fade show mt-3 col-6 offset-3"
+  class="alert alert-success alert-dismissible fade show mt-3 col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3 text-break"
   role="alert"
 >
   <%= success %>
@@ -13,7 +13,7 @@
 </div>
 <% } %> <% if(error && error.length){ %>
 <div
-  class="alert alert-danger alert-dismissible fade show mt-3 col-6 offset-3"
+  class="alert alert-danger alert-dismissible fade show mt-3 col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3 text-break"
   role="alert"
 >
   <%= error %>
